# ChangeLog for net-analyzer/rrdtool
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.212 2011/10/01 06:59:07 radhermit Exp $

  01 Oct 2011; Tim Harder <radhermit@gentoo.org> rrdtool-1.3.8.ebuild,
  rrdtool-1.4.5-r1.ebuild:
  Remove old blocker on ruby-rrd. Add dependency on pkgconfig (bug #385017 by
  Nikoli).

  01 Oct 2011; Tim Harder <radhermit@gentoo.org> -rrdtool-1.0.50.ebuild,
  -files/rrdtool-1.2.15-newstyle-resize.patch, -rrdtool-1.2.29.ebuild,
  -rrdtool-1.2.30.ebuild, -rrdtool-1.3.7.ebuild, -rrdtool-1.3.8-r1.ebuild,
  -rrdtool-1.3.9.ebuild, -rrdtool-1.4.2.ebuild, -rrdtool-1.4.3.ebuild,
  -rrdtool-1.4.4.ebuild, -rrdtool-1.4.5.ebuild:
  Remove old.

*rrdtool-1.4.5-r1 (07 Aug 2011)

  07 Aug 2011; Samuli Suominen <ssuominen@gentoo.org> +rrdtool-1.4.5-r1.ebuild:
  Disable building librrd.a and librrd_th.a and delete matching libtool files
  wrt #362895 by Cesko Voeten. Open a bug if you need USE="static-libs".

*rrdtool-1.4.5 (01 Jun 2011)

  01 Jun 2011; Jeroen Roovers <jer@gentoo.org> +rrdtool-1.4.5.ebuild:
  Version bump.

  10 Jan 2011; Hans de Graaff <graaff@gentoo.org> rrdtool-1.4.4.ebuild:
  Keyword ~x86-macos.

*rrdtool-1.4.4 (16 Dec 2010)

  16 Dec 2010; Hans de Graaff <graaff@gentoo.org> +rrdtool-1.4.4.ebuild,
  +files/rrdtool-1.4.4-dont-link-system-lib.patch:
  Version bump, bug 343017. Fix build with USE=ruby, bug 321749. Discussed
  with rej on IRC.

  16 Oct 2010; Hans de Graaff <graaff@gentoo.org> rrdtool-1.3.8.ebuild:
  Also apply the patch for bug 321749 to the stable version to fix USE=ruby
  build, as discussed with jer on #gentoo-dev.

  08 Jun 2010; Fabian Groffen <grobian@gentoo.org> rrdtool-1.4.3.ebuild:
  Avoid installing examples for non-installed features, helps to please
  shebang check from Prefix Portage.

  29 May 2010; Jeroen Roovers <jer@gentoo.org> rrdtool-1.4.3.ebuild,
  +files/rrdtool-1.4.3-ruby-ldflags.patch: