@@ -4,20 +4,22 @@ Hash: SHA512
 AUX rrdtool-1.3.8-configure.ac.patch 410 RMD160 7bc8ae6bf64fbc8602c0e4a4571c74d9afea818b SHA1 b28a7f253ff66d788a29d491ef57f11c6721bb16 SHA256 220d42a1228d015f6bd02124b3f8c878f0b7bda2e277e9e3b15d4f05603328b5
 AUX rrdtool-1.4.3-ruby-ldflags.patch 614 RMD160 dc43e0e459709323ab191005dcfb31b71eabd609 SHA1 ebc5b5140007266ec935b3693e680391ddd58091 SHA256 d51f1e01a5faccc0a83a09a7aca2fa251fdfd662ba19f3670ef6591e46afec09
 AUX rrdtool-1.4.4-dont-link-system-lib.patch 801 RMD160 ae423617f43efbffe00f84e5ad8c9e1c49ee896f SHA1 d4accd6c75027554e729633f296d7c2ddb506132 SHA256 7a726fe8534a9e56d7074af827ef88e96d5176d4f68983ff5514fb137c1f12eb
+DIST rrdtool-1.0.50.tar.gz 1474200 RMD160 96af2ec2831881e167687f65f5fc9bc64c67358b SHA1 399e2bf807e3fbc987eec4c5364dc4cb416ba287 SHA256 42aa7c213dedbd95d33ca84d92f4187880f7e96062c6a3fb05bfb16f77ba2a91
 DIST rrdtool-1.3.8.tar.gz 1021427 RMD160 e05cada9d1df11ed474536c1f6e11d7cc4c08077 SHA1 1fe71706442ddd78ec8cdbaadd8ce16bb1326b05 SHA256 a7084e07a8c78e91ca7af211af11f777c7a040b93ce21ab1144dd00079da0f38
 DIST rrdtool-1.4.5.tar.gz 1348713 RMD160 9c45c3be7bcb8e17260055a33e936f307884914f SHA1 56638e8aedd5d5522152e86746e382b75dc48c35 SHA256 1267af420533d846432e55352db89b0f2507c711f80c65e016f7484f3cb0cf1d
+EBUILD rrdtool-1.0.50.ebuild 2699 RMD160 9437bd6dcdc9a746e6d1ed4e3acbf8e1743fd22f SHA1 c499d29e873de476025b44a65dc9d91c16e4d0a6 SHA256 641512476009621f7402074a8bdfb19634c8ef55d038dc41f6fd59aee8bf87c9
 EBUILD rrdtool-1.3.8.ebuild 2675 RMD160 3c3f86284ec51257d8c0ababc429223a5be454d8 SHA1 c2ee49578fbd4ba40e7ed20479c23d0533cf1ee6 SHA256 b487a17f6fee97af87d53d496e59d64df86af93abe4feba0337846b352b80829
-EBUILD rrdtool-1.4.5-r1.ebuild 3156 RMD160 c51e670a585b9b629521888305cbfc83c4e0dd31 SHA1 bdd00375b8e400ad9cb6e8d96c3103e446cecc65 SHA256 476d31eb4d463bb455a8cdc2d35112d546a7777ea66f155649f63d961db99633
-MISC ChangeLog 32418 RMD160 281680a2d06c43a5459e0fac3f1215666a384c8d SHA1 743523ade3b1df0f230265df96642940f77bdb76 SHA256 3cbc039c6e03e43214f36b2a0d1fdd9b64830b0f35a822541834242c61fe254c
+EBUILD rrdtool-1.4.5-r1.ebuild 3637 RMD160 82679b38aad0e2239ffa5df29cb8fa6594740e19 SHA1 df97f94f04382c3e3e1bbb87ec9f79941ef68e5b SHA256 8071750d4fdb586aa28efe43476adccf199bd8d1a4ea9621a88ee2724fec52b7
+MISC ChangeLog 32654 RMD160 65b65e92f6eafb3cd02ca84704cfea8a5f5ad258 SHA1 c5d63a898c1a2f265c2478b2d21a91f9bb982424 SHA256 36f5c46a8ee7f143dbceb516fdd83d74c2322ea8aaf7569007008c7d91af309d
 MISC metadata.xml 376 RMD160 78da9054230eb8ed5474d75d1a0f7419eb1e45f9 SHA1 b7645e63557b4d5049032390ee07d86c5411fc96 SHA256 ccdb09cfa58f274722a7b61fb666c96c5d1c55d828fff44abc9415e56c056bb7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJOhrpBAAoJEEqz6FtPBkyjlccH/1lQpQuiaDuFck2X1YqoUn8H
-H4uU/XEr6mB9lct6vis03fkKgtiqjfubRxPSuA+b3nI6YfKbpXZRcEzgQK8Fqnkd
-pww8qpIC+7GBukjteokM+/OPVOH2DZC9TYgnVA08MHBs1umJIvSXKSTSwqoBs+7j
-loP5gkH+cAYWDb0J2OTH9gqIzE3UNh5XKpEfTrbRAfIiR7enF2csAZNln14kXfu2
-ee1O8Sm4wh2wiVUutnzkiZhtZRPZJIFPtc9LTXbMtmdwyCxWidwR5MyoNDUzmx8P
-NKRNBIrWBfhTrj8hUovnkHIixeMCGswiqZp6sxGmG7/Bd7nRx/sc7nzUECd662I=
-=z5sY
+iQEcBAEBCgAGBQJOh7ZaAAoJEEqz6FtPBkyjChwIAKFryJXG8STVBl3N4qxmP4Et
+Ji47409uodyumvRqqKafWvrO0Onb7mNmmSDEsWOczbYP1+vd5+WqGDxj2Es4c09n
+RjRwc/aiY8HARaoDWk2BHMH1kw7i1E23FIpHM3Ty2PJTizTKm2PR2khCuFqBOLoS
+55SaZx0c5HxLzwceJYV5my9MrhMim1iRqDS+/D/Fkm3+E5xDyy7j+m5ZNjTlEe7X
+hHkg8iFQUUfBXElQUFkxVwX5d9uNOQURQaFXGz7pK3QuMb4zzngjufdSlbyPCpBv
+AkVmxvCtLLzuKj7HsEcv4xlmTDNT2aFIjhExbZ8L3kgG4uIqk1/9hd8Ls6cd4nU=
+=Pz2C
 -----END PGP SIGNATURE-----
