@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/rrdtool
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.212 2011/10/01 06:59:07 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.214 2011/10/02 00:54:44 radhermit Exp $
+
+  02 Oct 2011; Tim Harder <radhermit@gentoo.org> rrdtool-1.4.5-r1.ebuild:
+  Improve python support (bug #315085 by Arfrever).
+
+  02 Oct 2011; Tim Harder <radhermit@gentoo.org> +rrdtool-1.0.50.ebuild:
+  Re-add old version for FlowScan.
 
   01 Oct 2011; Tim Harder <radhermit@gentoo.org> rrdtool-1.3.8.ebuild,
   rrdtool-1.4.5-r1.ebuild:
